--- a/css/styleahorro.css
+++ b/css/styleahorro.css
@@ -17,10 +17,14 @@
     color: rgb(255, 255, 255);
     text-shadow: 2px 2px 2px black;
   }
+  h4 span {
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 2px black;
+  }
   .container {
     max-width: 450px;
     height: auto;
-    background-color: #EFEFEF;
+    background-color: rgba(214, 214, 214, 0.836);
     margin: 5% auto;
     padding-bottom: 1rem;
     
