--- a/css/styleahorro.css
+++ b/css/styleahorro.css
@@ -4,15 +4,30 @@
     box-sizing: border-box;
     font-family: arial;
   }
+  :root{
+    --width: 100%;
+    --height: 100%;
+    --border-width: 200px;
+    --border-height: 200px;
   
-  body {
+  }
+  body{
     background: rgb(177, 109, 124);
   }
+  
+  
   h4 span {
     color: rgb(255, 255, 255);
     text-shadow: 2px 2px 2px black;
   }
   .container {
+    max-width: 450px;
+    height: auto;
+    background-color: rgba(214, 214, 214, 0.836);
+    margin: 7% auto;
+    padding-bottom: 1rem;
+  }
+  .container2 {
     max-width: 450px;
     height: auto;
     background-color: rgba(214, 214, 214, 0.836);
