--- a/css/main.css
+++ b/css/main.css
@@ -67,19 +67,19 @@ h2 span {
 .btn__submit, .btn__reset {
 	width: 40%;
 	border-bottom: none;
-	background-color: rgba(119, 207, 163, 0.836);
+	background-color: rgba(8, 119, 65, 0.836);
 	color: white;
 }
 
 .btn__reset {
-	background-color: #EDA135;
+	background-color: rgb(187, 98, 15);;
 	width: 200px;
 }
 
 .btn__submit:hover {
-	background-color:  rgba(8, 119, 65, 0.836);
+	background-color: rgba(119, 207, 163, 0.836);
 }
 
 .btn__reset:hover{
-	background-color: rgb(133, 69, 9);
+	background-color: #EDA135;
 }
