--- a/css/stylefondo.css
+++ b/css/stylefondo.css
@@ -96,6 +96,10 @@ h4 span {
 	color: rgb(255, 255, 255);
 	text-shadow: 2px 2px 2px black;
 }
+h3 span {
+	color: rgb(255, 255, 255);
+	text-shadow: 2px 2px 2px black;
+}
 h2 span {
 	color: rgb(255, 255, 255);
 	text-shadow: 2px 2px 2px black;
